toc overflow fix 1.1

--- a/assets/css/post.css
+++ b/assets/css/post.css
@@ -62,13 +62,12 @@
     margin-top: .5em;
 }
 
-.toc {
-    overflow-y: auto
+.toc .toc-list {
+    overflow-x: visible;
+    overflow-y: hidden;
 }
 
 .toc > .toc-list {
-    overflow-x: visible;
-    overflow-y: hidden;
     position: relative
 }
 
